feat: add get receiver endpoint
