# docs/swagger.yaml
@@ -132,6 +132,39 @@ definitions:
       user_id:
         type: integer
     type: object
+  dto.ReceiverPaginationResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/dto.Receivers'
+        type: array
+      meta:
+        $ref: '#/definitions/dto.PaginationMeta'
+    type: object
+  dto.ReceiverSwaggerResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/dto.ReceiverPaginationResponse'
+        type: array
+      message:
+        example: success to get all transactions
+        type: string
+      success:
+        example: true
+        type: boolean
+    type: object
+  dto.Receivers:
+    properties:
+      fullName:
+        type: string
+      id:
+        type: integer
+      phone:
+        type: string
+      photo:
+        type: string
+    type: object
   dto.RegisterRequest:
     properties:
       email:
@@ -588,6 +621,50 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Transfer balance to another wallet
+      tags:
+      - transaction
+  /transactions/transfer/receivers:
+    get:
+      consumes:
+      - application/json
+      description: get all receiver users with pagination and search
+      parameters:
+      - description: page number
+        example: 1
+        in: query
+        name: page
+        type: integer
+      - description: limit data
+        example: 10
+        in: query
+        name: limit
+        type: integer
+      - description: search by fullname or phone
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.ReceiverSwaggerResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorSwaggerResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ErrorSwaggerResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorSwaggerResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all receivers
       tags:
       - transaction
   /user/profile:
